# grad_descent_log_like

./: .gitignore  pyproject.toml
src/grad_descent_log_like/: main.py
